package com.company;

/**
 * Application interface that you can compile and fix its bugs
 *
 */
public interface Application {
    int compile();
    boolean fixBug();
}
